[gd_scene load_steps=23 format=3 uid="uid://0ys4hkqfgnd6"]

[ext_resource type="Texture2D" uid="uid://1dlq85d7cm71" path="res://Sprites/GunTurrets/GunTurretMount_png_processed.png" id="1_0wlru"]
[ext_resource type="Script" uid="uid://w0ef5sgr4rnp" path="res://Nodes/Bosses/boss_centre_turret.gd" id="1_xaxs4"]
[ext_resource type="Texture2D" uid="uid://byq0kipyckc2r" path="res://Sprites/GunTurrets/GunTurret_ExampleGun_png_processed.png" id="2_xaxs4"]
[ext_resource type="Texture2D" uid="uid://dsjoo00j2m8ik" path="res://Sprites/GunTurrets/GunTurret_Green_png_processed.png" id="3_qlwtn"]
[ext_resource type="PackedScene" uid="uid://dvgiyukkhh0d5" path="res://Nodes/Spawners/bullet_spawner.tscn" id="4_l6j78"]
[ext_resource type="Script" uid="uid://crc4elm4ufayc" path="res://Nodes/Bullet Patterns/bullet_pattern_node.gd" id="5_q4ghy"]
[ext_resource type="Script" uid="uid://noyk50r5d5ii" path="res://Nodes/utility/hit_box.gd" id="7_rt4na"]
[ext_resource type="Texture2D" uid="uid://c5q2o3xwc0ljm" path="res://Sprites/Explosions/Explosion02_Frame_01_png_processed.png" id="7_y4t84"]
[ext_resource type="Texture2D" uid="uid://xx7hh71c2cju" path="res://Sprites/Explosions/Explosion02_Frame_02_png_processed.png" id="8_rt4na"]
[ext_resource type="Texture2D" uid="uid://bxjt1vrtrvaeb" path="res://Sprites/Explosions/Explosion02_Frame_03_png_processed.png" id="9_1hne1"]
[ext_resource type="Texture2D" uid="uid://02r6aabd7wcd" path="res://Sprites/Explosions/Explosion02_Frame_04_png_processed.png" id="10_u2isn"]
[ext_resource type="Texture2D" uid="uid://bsj6e2qowdjoy" path="res://Sprites/Explosions/Explosion02_Frame_05_png_processed.png" id="11_2xdnh"]
[ext_resource type="Texture2D" uid="uid://bndpkyvfgk3tq" path="res://Sprites/Explosions/Explosion02_Frame_06_png_processed.png" id="12_synf5"]
[ext_resource type="Texture2D" uid="uid://bufdy7hmdw4b2" path="res://Sprites/Explosions/Explosion02_Frame_07_png_processed.png" id="13_0vgmv"]
[ext_resource type="Texture2D" uid="uid://d283ldhu5qjpk" path="res://Sprites/Explosions/Explosion02_Frame_08_png_processed.png" id="14_x5egi"]
[ext_resource type="Texture2D" uid="uid://cr7iyi6oyklxn" path="res://Sprites/Explosions/Explosion02_Frame_09_png_processed.png" id="15_b2ljb"]
[ext_resource type="AudioStream" uid="uid://s6f4le1tqdsh" path="res://Sound Effects/Explosion Medium 2-1.wav" id="16_wuf1g"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rp2gh"]
radius = 24.0832

[sub_resource type="Animation" id="Animation_kw2q4"]
length = 0.001

[sub_resource type="Animation" id="Animation_vsvdf"]
resource_name = "damaged"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("boss_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.05, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2, 0), Vector2(-2, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("boss_sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.194376, 0.144153, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_khsql"]
_data = {
&"RESET": SubResource("Animation_kw2q4"),
&"damaged": SubResource("Animation_vsvdf")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_u2leg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_y4t84")
}, {
"duration": 1.0,
"texture": ExtResource("8_rt4na")
}, {
"duration": 1.0,
"texture": ExtResource("9_1hne1")
}, {
"duration": 1.0,
"texture": ExtResource("10_u2isn")
}, {
"duration": 1.0,
"texture": ExtResource("11_2xdnh")
}, {
"duration": 1.0,
"texture": ExtResource("12_synf5")
}, {
"duration": 1.0,
"texture": ExtResource("13_0vgmv")
}, {
"duration": 1.0,
"texture": ExtResource("14_x5egi")
}, {
"duration": 1.0,
"texture": ExtResource("15_b2ljb")
}],
"loop": false,
"name": &"default",
"speed": 16.0
}]

[node name="boss_centre_turret" type="Node2D"]
script = ExtResource("1_xaxs4")

[node name="boss_sprite" type="Sprite2D" parent="."]
position = Vector2(2, 0)

[node name="boss_turret_turret" type="Sprite2D" parent="boss_sprite"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_0wlru")

[node name="boss_turret_barrel" type="Sprite2D" parent="boss_sprite"]
position = Vector2(0, 8.00002)
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_xaxs4")

[node name="boss_turret_body" type="Sprite2D" parent="boss_sprite"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_qlwtn")

[node name="boss_hitbox" type="Area2D" parent="boss_sprite" node_paths=PackedStringArray("owner_root_node")]
position = Vector2(-2, 0)
collision_layer = 0
collision_mask = 0
script = ExtResource("7_rt4na")
owner_root_node = NodePath("../..")

[node name="boss_hitbox_shape" type="CollisionShape2D" parent="boss_sprite/boss_hitbox"]
position = Vector2(2, 0)
shape = SubResource("CircleShape2D_rp2gh")

[node name="bullet_spawner" parent="." instance=ExtResource("4_l6j78")]
position = Vector2(0, 21)
scale = Vector2(0.75, 0.75)

[node name="bullet_pattern_node" type="Node" parent="."]
script = ExtResource("5_q4ghy")
bullet_pattern_type = 2
metadata/_custom_type_script = "uid://crc4elm4ufayc"

[node name="shooting_timer" type="Timer" parent="."]
wait_time = 7.0

[node name="boss_turret_animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_khsql")
}

[node name="turret_explodes" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_u2leg")

[node name="turret_death_sound" type="AudioStreamPlayer" parent="turret_explodes"]
stream = ExtResource("16_wuf1g")
volume_db = -6.0

[connection signal="timeout" from="shooting_timer" to="." method="_on_shooting_timer_timeout"]
